# langserve-deploy-test

./: app.py  rag.py  requirements.txt
helloworld-dev-conference-langserve-ai/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
helloworld-dev-conference-langserve-ai/rag/: __init__.py  rag_chain.py
vector_db/: qdrant.py
